feat(autoRenew): 調整自動續訂功能
調整:

1. 續訂狀態改成放在 user model

2. 移除 subscription model (用不到)

3. 續訂 api 放在 member router，需判斷是否為訂閱會員
